--- a/lecture28.ipynb
+++ b/lecture28.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "1f143cfb-9e77-4c88-93f2-bb5c5ab75013",
    "metadata": {},
    "outputs": [],
@@ -127,12 +127,12 @@
     "    def sub(self,a,b):\n",
     "        print(a-b)\n",
     "    def multi(self,a,b):\n",
-    "        print(a*b)"
+    "        print(a*b+2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "490c869c-079f-48b9-9194-f25359cf5ef1",
    "metadata": {},
    "outputs": [],
@@ -164,6 +164,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b71f9ccd-abb3-4ec3-a565-aff69123506a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a2c9453-8f98-4e0b-89b1-e86aacad5aa4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd7f1fd8-e407-48e3-8247-0f9fe7563b36",
    "metadata": {},
    "outputs": [],
    "source": []
