print hellow worl

--- a/lecture28.ipynb
+++ b/lecture28.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "id": "ba7c91fb-b8f5-4301-9dc1-4f1b24b7eab3",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "id": "2cd86151-fc10-4559-9475-93c3e8abeaed",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "id": "b8de14a4-8bac-40a4-978e-ea0c0af9bcb7",
    "metadata": {},
    "outputs": [
@@ -80,17 +80,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "20\n"
      ]
     }
    ],
    "source": [
-    "subtract_numbers(40,10)"
+    "subtract_numbers(40,20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "id": "22906b80-98ff-4155-9b91-08ee8a8e1839",
    "metadata": {},
    "outputs": [
@@ -98,12 +98,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60\n"
+      "270\n"
      ]
     }
    ],
    "source": [
-    "add_numbers(50,10)"
+    "add_numbers(50,220)"
    ]
   },
   {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "id": "1f143cfb-9e77-4c88-93f2-bb5c5ab75013",
    "metadata": {},
    "outputs": [],
@@ -127,12 +127,12 @@
     "    def sub(self,a,b):\n",
     "        print(a-b)\n",
     "    def multi(self,a,b):\n",
-    "        print(a*b+2)"
+    "        print(a*b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "id": "490c869c-079f-48b9-9194-f25359cf5ef1",
    "metadata": {},
    "outputs": [],
@@ -142,52 +142,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "80a5abab-032b-4f69-bff7-7f197a5cdbf6",
+   "execution_count": 76,
+   "id": "229522e1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'add' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m add(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m20\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'add' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b71f9ccd-abb3-4ec3-a565-aff69123506a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a2c9453-8f98-4e0b-89b1-e86aacad5aa4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd7f1fd8-e407-48e3-8247-0f9fe7563b36",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "print(\"hello world\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.0b1"
   }
  },
  "nbformat": 4,
